属性本地化 不可写内部类

--- a/MvcBlog/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MvcBlog/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
 @model RegisterModel
+@inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = Localizer["Register"];
 }
 
 <h1>@ViewData["Title"]</h1>
